@@ -1,3 +1,10 @@
+2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/abswordseg.h (AbsWordSeg::Has_Karun):
+	Declare another utility function as static member.
+	* src/abswordseg.cpp (AbsWordSeg::Has_Karun):
+	Replace negative number literal with hexadecimal code, for readability.
+
 2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
